fix: fixed the main page title

--- a/Web/index.html
+++ b/Web/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head>VDKcoin Website</head>
+<head>
+    <title>VDKcoin Website</title>
+</head>
 <body>
     <header>Добро пожаловать на официальный сайт сети VDKcoin!</header>
     <h1>История возникновения</h1>
