feat: changed info on the main page

--- a/Web/index.html
+++ b/Web/index.html
@@ -10,7 +10,7 @@
     </p>
     <h1>Что такое блокчейн, криптовалюты и другие страшные слова?</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi ullam expedita et? Velit officia sunt mollitia incidunt. Commodi inventore aut soluta culpa quisquam ratione eum molestias exercitationem, voluptates asperiores perferendis illum unde reiciendis vero, maxime incidunt eius, natus nihil sapiente rerum beatae ab. Necessitatibus quae velit debitis architecto delectus!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quos molestiae architecto, amet quo soluta possimus inventore officia repellendus, quasi dolor nobis maxime delectus quaerat. Qui animi delectus ab facilis similique placeat beatae nemo, consequuntur rerum in, veniam sapiente architecto nulla adipisci accusantium laudantium quia! Atque aspernatur fuga earum repellat mollitia eius? Odit ipsum porro aspernatur! Blanditiis consequuntur dolorem recusandae fugiat dicta eaque laudantium quasi aliquid! Eum doloribus nobis laboriosam, dolorem a consequuntur veniam modi nisi laudantium! Quod earum voluptatum, atque libero corrupti aut dignissimos, alias ea voluptates voluptate ut. Blanditiis inventore suscipit totam nihil fugiat provident praesentium expedita voluptate.
     </p>
     <h2>Просто пройдите регистрацию, и вам на кошелёк поступит 10 VDKcoin!</h2>
 </body>
